# yogacara-agent

./: .coverage  .env  .env.openrouter  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  EXTERNAL_API_GUIDE.md  LICENSE  README.md  _fix2.py  compare_runs.py  compare_step.py  debug_async_random.py  debug_clean_compare.py  debug_compare.py  debug_compare2.py  debug_compare3.py  debug_demo_stuck.py  debug_exact.py  debug_exact_diff.py  debug_langgraph_random.py  debug_lg_count.py  debug_lg_minimal.py  debug_lg_random2.py  debug_planner.py  debug_production.py  debug_production2.py  debug_random.py  debug_rng2.py  debug_rng_trace.py  debug_seeds.py  debug_step0.py  debug_step0_v2.py  debug_step8.py  debug_step8_with_manas.py  debug_trajectory.py  demo_app.py  (+16 more)
.github/workflows/: release.yml
config/: settings.yaml
docs/: AWAKENING_ENGINE.md  DEPLOYMENT.md  EXPERIMENTS.md  SECURITY.md  TRANSFORMATION_DESIGN.md  TURNING_CONSCIOUSNESS.md
exp_results_gemma_100/: experiment_logs.csv
exp_results_gemma_50/: experiment_logs.csv  step_stats.csv
exp_results_model_test_gemma-2-9b-it_free/: experiment_logs.csv  step_stats.csv
exp_results_model_test_llama-3-8b-instruct_free/: experiment_logs.csv
exp_results_model_test_phi-3-mini-128k-instruct_free/: experiment_logs.csv  step_stats.csv
exp_results_openrouter/: experiment_logs.csv  step_stats.csv
exp_results_scale_30/: experiment_logs.csv  step_stats.csv
experiments/: experiment_logs.csv  step_stats.csv
helm/yogacara-agent/: Chart.yaml  values.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
src/: api_server.py  exp_automator.py  llm_planner.py  metrics.py  milvus_memory.py  online_alignment.py  plot_yogacara_paper.py  ray_serve_deploy.py  reward_designer.py  vllm_ray_topology.py  yogacara_langgraph.py  yogacara_test.py
src/env_adapters/: base.py  isaac_adapter.py  ros2_adapter.py  unity_adapter.py
tests/: test_core.py  test_turning_consciousness.py
(+34 files in other folders)
