[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yogacara-agent"
version = "1.0.0"
description = "A cognitive evolution framework for AI Agents based on Yogacara theory"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "Yogacara Team", email = "contact@yogacara.dev"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "numpy>=1.24.0", "pydantic>=2.0.0", "rich>=13.0.0",
    "langgraph>=0.0.30", "langchain-core>=0.1.0",
    "fastapi>=0.109.0", "uvicorn>=0.27.0",
    "prometheus-client>=0.19.0", "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0.0", "ruff>=0.3.0", "mypy>=1.0", "pre-commit"]
llm = ["openai>=1.0.0", "tenacity>=8.0.0", "transformers>=4.38.0", "peft>=0.9.0", "trl>=0.8.0"]
memory = ["pymilvus>=2.3.0", "faiss-cpu>=1.7.4"]
serve = ["ray[serve]>=2.9.0", "vllm>=0.3.0", "slowapi>=0.1.0"]
plot = ["matplotlib>=3.7.0", "seaborn>=0.12.0", "pandas>=2.0.0", "tqdm>=4.65.0"]
all = ["yogacara-agent[dev,llm,memory,serve,plot]"]

[project.scripts]
yogacara-run = "src.cli:main"
yogacara-exp = "src.exp_automator:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501", "E701", "E702", "E401", "B904", "B027", "N806", "N801", "SIM103", "B905", "I001", "UP006", "UP035", "E712", "F841"]  # Relaxed for generated code

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
